@@ -125,7 +125,7 @@ void file_entry::load(std::istream & is, const version & version) {
 		flagreader.add(RegisterTypeLib);
 		flagreader.add(SharedFile);
 	}
-	if(version < INNO_VERSION(2, 0, 0)) {
+	if(version < INNO_VERSION(2, 0, 0) && !version.is_isx()) {
 		flagreader.add(IsReadmeFile);
 	}
 	flagreader.add(CompareTimeStamp);
@@ -154,7 +154,7 @@ void file_entry::load(std::istream & is, const version & version) {
 		flagreader.add(IgnoreVersion);
 		flagreader.add(PromptIfOlder);
 	}
-	if(version >= INNO_VERSION_EXT(3, 0, 6, 1)) {
+	if(version >= INNO_VERSION(4, 0, 0) || (version.is_isx() && version >= INNO_VERSION_EXT(3, 0, 6, 1))) {
 		flagreader.add(DontCopy);
 	}
 	if(version >= INNO_VERSION(4, 0, 5)) {
